test/files/pos/contrib701.scala
trait B {
  type A[T] >: A[A[T]]
}
