test/files/neg/bug1224.scala
trait C[T] {}

abstract class A {
 type T >: C[T] <: C[C[T]]
}
